# qgis-plugin-bivariate-renderer

./: .coveragerc  .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml  zip_plugin.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: mkdocs_build_deploy.yaml  regenerate_graphical_tests.yaml  test_plugin.yaml
BivariateRenderer/: LICENSE  Makefile  __init__.py  bivariate_renderer_plugin.py  bivariate_renderer_provider.py  metadata.txt  pb_tool.cfg  test_blending_modes.py  text_constants.py  utils.py
BivariateRenderer/colormixing/: color_mixing_method.py  color_mixing_methods_register.py
BivariateRenderer/colorramps/: bivariate_color_ramp.py  color_ramps_register.py
BivariateRenderer/data/: axis_line_symbol.json  empty_rectangle_fill_symbol.xml
BivariateRenderer/layoutitems/: layout_item.py  layout_item_widget.py
BivariateRenderer/legendrenderer/: legend_renderer.py
BivariateRenderer/renderer/: bivariate_legend.py  bivariate_renderer.py  bivariate_renderer_metadata.py  bivariate_renderer_utils.py  bivariate_renderer_widget.py
BivariateRenderer/tools/: tool_calculate_categories.py
changelog/: index.html
color_mixing/: index.html
color_ramps_examples/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_bivariate_renderer.py  test_bivariate_renderer_widget.py  test_color_mixing.py  test_color_ramps.py  test_generate_correct_images.py  test_layout_item_legend.py  test_layout_item_map.py  test_layout_item_widget.py  test_legend_renderer.py
website/: color_ramps_examples.md  mkdocs.yml
(+14 files in other folders)
